# SQL-workshop-jupyter-ao-deploy

./: README.md  database.py  pyproject.toml
